# csd-conan

./: CMakeLists.txt  conanfile.txt
.trunk/: out
